Updated styles for the portfolio and blogs pages

--- a/src/components/socialicons/style.css
+++ b/src/components/socialicons/style.css
@@ -14,9 +14,13 @@
 }
 
 .stick_follow_icon svg {
-    width: 1.3em;
-    height: 1.3em;
+    width: 1.8em;
+    height: 1.8em;
     fill: var(--text-color)
+}
+
+.stick_follow_icon svg:hover {
+    fill: gold;
 }
 
 .stick_follow_icon p {
@@ -30,7 +34,7 @@
     line-height: 1.2;
     white-space: nowrap;
     position: relative;
-    transform: rotate( -90deg);
+    transform: rotate(-90deg);
 }
 
 .stick_follow_icon ul li {
@@ -64,6 +68,7 @@
         padding: 40px 0;
         align-items: center;
     }
+
     .stick_follow_icon p {
         top: unset;
         left: unset;
@@ -75,9 +80,11 @@
         font-size: 17px;
         margin-right: 65px;
     }
+
     .stick_follow_icon ul {
         margin-bottom: 20px;
     }
+
     .stick_follow_icon ul li {
         display: inline;
         margin-bottom: 29px;
