--- a/src/components/header/style.css
+++ b/src/components/header/style.css
@@ -1,4 +1,5 @@
 .site__header {
+    /* background-color: red; */
     top: 10px;
     padding-left: 10px;
     padding-right: 10px;
@@ -22,15 +23,14 @@
 }
 
 .nav_ac {
-    padding: 5px 15px;
+    padding: 0px 15px;
     margin: 0;
     border: unset;
-    background: var(--primary-color);
     font-size: 1.25rem;
     font-family: Marcellus;
     color: var(--text-color-2);
-    line-height: 2;
-    height: 50px;
+    /* line-height: 2; */
+    /* height: 50px; */
     font-weight: bold;
     z-index: 1000;
 }
@@ -165,6 +165,7 @@
     .menu__container {
         margin-left: 33.3333%;
     }
+
     .the_menu {
         padding-top: 10vh;
         padding-bottom: 10vh;
@@ -204,4 +205,10 @@
     color: var(--text-color-2);
     margin-right: 10px;
     text-decoration: none;
+}
+
+.logo_letters {
+    font-family: 'Times New Roman', Times, serif;
+    font-weight: 900;
+    font-size: 1.5rem;
 }
