--- a/src/pages/portfolio/style.css
+++ b/src/pages/portfolio/style.css
@@ -1,80 +1,72 @@
 .po_items_ho {
-    column-width: 15em;
-    -moz-column-width: 15em;
-    -webkit-column-width: 15em;
-    column-gap: 4rem;
-    -moz-column-gap: 4rem;
-    -webkit-column-gap: 4rem;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 2rem;
+    padding: 2rem 0;
+    justify-items: center;
 }
 
 .po_item {
-    display: inline-block;
-    width: 100%;
-    text-align: center;
-    margin: 0.5rem auto;
-    position: relative;
     background: var(--secondary-color);
-    padding: 6px;
-    border: 1px solid var(--secondary-color);
-    transition: 0.3s ease;
-    font-size: 0;
-    /* min-height: 300px; */
-}
-
-.po_item img {
-    max-width: 100%;
-}
-
-.po_item .content {
-    position: absolute;
-    height: 0;
-    width: 0;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    background: var(--overlay-color);
-    z-index: 1;
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-    align-items: center;
-    height: 100%;
-    width: 100%;
-    transition: 0.3s ease-in-out;
-    opacity: 0;
-    border: 1px solid black;
-}
-
-.po_item .content {
-    opacity: 0;
-    transition-delay: 1s;
-    transition: 0.3s ease;
-    font-size: 20px;
+    border-radius: 12px;
+    overflow: hidden;
+    box-shadow: 0 4px 8px rgba(255, 255, 255, 0.1);
+    width: 280px;
+    transition: transform 0.5s ease, box-shadow 0.5s ease;
+    position: relative;
 }
 
 .po_item:hover {
-    box-shadow: 0 10px 15px 0 rgba(0, 0, 0, 0.25);
+    transform: translateY(-10px) scale(1.05) rotate3d(1, 1, 0, 5deg);
+    box-shadow: 0 12px 20px rgba(255, 255, 255, 0.3);
+}
+
+.po_item img {
+    width: 100%;
+    height: 200px;
+    object-fit: cover;
+}
+
+.po_item .content {
+    background: rgba(0, 0, 0, 0.8);
+    color: var(--text-color);
+    padding: 1rem;
+    text-align: center;
+    opacity: 0;
+    transition: opacity 0.3s ease-in-out;
+    height: 100%;
+    width: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
 .po_item:hover .content {
-    height: calc(100% - 30px);
-    width: calc(100% - 30px);
     opacity: 1;
 }
 
-.po_item:hover .content {
-    opacity: 1;
-    color: var(--secondary-color);
+.po_item .content p {
+    margin-bottom: 1rem;
+    font-size: 1rem;
+    color: #fff;
 }
 
 .po_item .content a {
     background: var(--bg-color);
     border: solid 1px var(--text-color);
-    padding: 4px 8px;
-    text-align: center;
+    padding: 8px 16px;
+    border-radius: 5px;
     font-size: 1rem;
+    transition: background 0.3s;
+    color: var(--text-color);
 }
 
 .po_item .content a:hover {
+    background: var(--text-color);
+    color: var(--bg-color);
     text-decoration: none;
 }
